--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: PintoKits
-version: '1.0-SNAPSHOT'
+version: '1.2'
 main: me.pintoadmin.pintoKits.PintoKits
 api-version: '1.21'
 authors: [ PintoJ ]
